--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	
+	<properties>
+  <sonar.projectKey>maheshmojo_Sample-Backend</sonar.projectKey>
+  <sonar.organization>maheshmojo</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
 	<dependencies>
 		<dependency>
