--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:8080/mahesh_learnings
+spring.datasource.url=jdbc:mysql://mysqldb/bootdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ?user=root
+
