--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://mysqldb/bootdb
+spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=letmein
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-?user=root
-
-server.port=8080
